--- a/index.html
+++ b/index.html
@@ -45,14 +45,17 @@
         </nav>
         <ul class="nav-header">
           <li class="item mail">
-            <a class="mail-header link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="mail-header link" href="mailto:info@devstudio.com">
+              <svg class="header-address" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>info@devstudio.com
+            </a>
           </li>
           <li class="item tel">
-            <a class="tel-header link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a class="tel-header link" href="tel:+380961111111">
+              <svg class="header-address" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -68,6 +71,9 @@
         <div class="container">
           <ul class="skills">
             <li class="skill-box-one">
+              <div class="icons-middle"><svg class="icon-antenna" width="70" height="70">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg></div>
               <h3 class="skill-name">увага до деталей</h3>
               <p class="team-skills">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -75,6 +81,9 @@
               </p>
             </li>
             <li class="skill-box-two">
+              <div class="icons-middle"><svg class="icon-clock" width="70" height="70">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg></div>
               <h3 class="skill-name">пунктуальність</h3>
               <p class="team-skills">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -82,12 +91,18 @@
               </p>
             </li>
             <li class="skill-box-three">
+              <div class="icons-middle"><svg class="icon-diagram" width="70" height="70">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg></div>
               <h3 class="skill-name">планування</h3>
               <p class="team-skills">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="skill-box-four">
+              <div class="icons-middle"><svg class="icon-astronaut" width="70" height="70">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg></div>
               <h3 class="skill-name">сучасні технології</h3>
               <p class="team-skills">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -143,6 +158,36 @@
                 <h3 class="team-name one">Ігор Дем'яненко</h3>
                 <p class="prof">Product Designer</p>
               </div>
+              <ul class="icons-social">
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-instagram" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg></a></li>
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-twitter" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg></a></li>
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-facebook" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg></a></li>
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-linkedin" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg></a></li>
+              </ul>
             </li>
             <li class="team-two">
               <img
@@ -155,6 +200,36 @@
                 <h3 class="team-name two">Ольга Рєпіна</h3>
                 <p class="prof">Frontend Developer</p>
               </div>
+              <ul class="icons-social">
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-instagram" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg></a></li>
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-twitter" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg></a></li>
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-facebook" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg></a></li>
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-linkedin" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg></a></li>
+              </ul>
             </li>
             <li class="team-three">
               <img
@@ -167,6 +242,36 @@
                 <h3 class="team-name three">Микола Тарасов</h3>
                 <p class="prof">Marketing</p>
               </div>
+              <ul class="icons-social">
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-instagram" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg></a></li>
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-twitter" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg></a></li>
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-facebook" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg></a></li>
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-linkedin" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg></a></li>
+              </ul>
             </li>
             <li class="team-four">
               <img
@@ -179,13 +284,93 @@
                 <h3 class="team-name four">Михайло Єрмаков</h3>
                 <p class="prof">UI Designer</p>
               </div>
+              <ul class="icons-social">
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-instagram" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg></a></li>
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-twitter" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg></a></li>
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-facebook" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg></a></li>
+                <li class="icon-social"><a class="social-link" 
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  aria-label="instagram icon"><svg class="icon-linkedin" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg></a></li>
+              </ul>
             </li>
           </ul>
-        </div>
+        </div>   
+      </section>
+      <section class="section-constant-client">
+        <div class="container">
+        <h2 class="picture-name-two">Постійні кліенти</h2>
+        <ul class="companys-item">
+          <li class="companys"><a class="companys-link" 
+            href=""
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            aria-label="company"><svg class="company" width="106" height="60">
+            <use href="./images/icons.svg#icon-Logo1"></use>
+          </svg></a></li>
+          <li  class="companys"><a class="companys-link" 
+            href=""
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            aria-label="company"><svg class="company" width="106" height="60">
+            <use href="./images/icons.svg#icon-Logo2"></use>
+          </svg></a></li>
+          <li  class="companys"><a class="companys-link" 
+            href=""
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            aria-label="company"><svg class="company" width="106" height="60">
+            <use href="./images/icons.svg#icon-Logo3"></use>
+          </svg></a></li>
+          <li  class="companys"><a class="companys-link" 
+            href=""
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            aria-label="company"><svg class="company" width="106" height="60">
+            <use href="./images/icons.svg#icon-Logo4"></use>
+          </svg></a></li>
+          <li  class="companys"><a class="companys-link" 
+            href=""
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            aria-label="company"><svg class="company" width="106" height="60">
+            <use href="./images/icons.svg#icon-Logo5"></use>
+          </svg></a></li>
+          <li  class="companys"><a class="companys-link" 
+            href=""
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            aria-label="company"><svg class="company" width="106" height="60">
+            <use href="./images/icons.svg#icon-Logo6"></use>
+          </svg></a></li>
+        </ul>
+      </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-item">
+        <div class="footer-address-link">
         <a href="" class="logo-two foot">
           <span class="first-part-footer">Web</span
           ><span class="last-part-footer">Studio</span>
@@ -213,6 +398,40 @@
             </li>
           </ul>
         </address>
+      </div>
+        <div class="connection">
+          <p class="connect">ПРИЄДНУЙТЕСЬ</p>
+          <ul class="icons-social footer-link">
+            <li class="icon-social-footer"><a class="social-link-footer" 
+              href="https://instagram.com"
+              target="_blank"
+              rel="nofollow noopener noreferrer"
+              aria-label="instagram icon"><svg class="icon-instagram" width="20" height="20">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg></a></li>
+            <li class="icon-social-footer"><a class="social-link-footer" 
+              href="https://instagram.com"
+              target="_blank"
+              rel="nofollow noopener noreferrer"
+              aria-label="instagram icon"><svg class="icon-twitter" width="20" height="20">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg></a></li>
+            <li class="icon-social-footer"><a class="social-link-footer" 
+              href="https://instagram.com"
+              target="_blank"
+              rel="nofollow noopener noreferrer"
+              aria-label="instagram icon"><svg class="icon-facebook" width="20" height="20">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg></a></li>
+            <li class="icon-social-footer"><a class="social-link-footer" 
+              href="https://instagram.com"
+              target="_blank"
+              rel="nofollow noopener noreferrer"
+              aria-label="instagram icon"><svg class="icon-linkedin" width="20" height="20">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg></a></li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
