--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="container">
           <h2 class="picture-name-two">Наша команда</h2>
           <ul class="team-photo">
-            <li class="team-one">
+            <li class="team-picture">
               <img
                 src="./images/img3.jpg"
                 alt="Ігор Дем'яненко"
@@ -189,7 +189,7 @@
                 </svg></a></li>
               </ul>
             </li>
-            <li class="team-two">
+            <li class="team-picture">
               <img
                 src="./images/img4.jpg"
                 alt="Ольга Рєпіна"
@@ -231,7 +231,7 @@
                 </svg></a></li>
               </ul>
             </li>
-            <li class="team-three">
+            <li class="team-picture">
               <img
                 src="./images/img5.jpg"
                 alt="Микола Тарасов"
@@ -273,7 +273,7 @@
                 </svg></a></li>
               </ul>
             </li>
-            <li class="team-four">
+            <li class="team-picture">
               <img
                 src="./images/img6.jpg"
                 alt="Михайло Єрмаков"
