--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header-main">
       <div class="container header-one">
         <a href="" class="logo-one">
           <span class="first-part">Web</span
@@ -26,33 +26,45 @@
         </a>
         <nav class="header-nav">
           <ul class="nav-header">
-            <li class="item">
+            <li class="item-nav">
               <a
                 class="nav-studio link"
                 href="https://scoandrey.github.io/goit-markup-hw-03/"
                 >Студія</a
               >
             </li>
-            <li class="item">
+            <li class="item-nav">
               <a
                 class="nav-item link"
                 href="https://scoandrey.github.io/goit-markup-hw-03/portfolio.html"
                 >Портфоліо</a
               >
             </li>
-            <li class="item"><a class="nav-item link" href="">Контакти</a></li>
+            <li class="item-nav">
+              <a class="nav-item link" href="">Контакти</a>
+            </li>
           </ul>
         </nav>
         <ul class="nav-header">
-          <li class="item mail">
-            <a class="mail-header link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+          <li class="item-nav">
+            <div class="mail-nav">
+              <a class="mail-header link" href="mailto:info@devstudio.com">
+                <svg class="header-address" width="16" height="12">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
+            </div>
           </li>
-          <li class="item tel">
-            <a class="tel-header link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+          <li class="item-nav">
+            <div class="tel-nav">
+              <a class="tel-header link" href="tel:+380961111111"
+                ><svg class="header-address" width="10" height="16">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
+            </div>
           </li>
         </ul>
       </div>
@@ -87,146 +99,215 @@
           </ul>
           <ul class="services">
             <li class="content">
-              <img
-                src="./images/kryak.jpg"
-                alt="Технокряк"
-                width="370"
-                height="294"
-              />
-              <div class="offer">
-                <h3 class="list-name">Технокряк</h3>
-                <p class="content-name">Веб-сайт</p>
-              </div>
+              <a class="portfolio-link" href="">
+                <img
+                  src="./images/kryak.jpg"
+                  alt="Технокряк"
+                  width="370"
+                  height="294"
+                />
+                <div class="offer">
+                  <h3 class="list-name">Технокряк</h3>
+                  <p class="content-name">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="content">
-              <img
-                src="./images/poster.jpg"
-                alt="Постер New Orlean vs Golden Star"
-                width="370"
-                height="294"
-              />
-              <div class="offer">
-                <h3 class="list-name">Постер New Orlean vs Golden Star</h3>
-                <p class="content-name">Дизайн</p>
-              </div>
+              <a class="portfolio-link" class="portfolio-link" href="">
+                <img
+                  src="./images/poster.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                  height="294"
+                />
+                <div class="offer">
+                  <h3 class="list-name">Постер New Orlean vs Golden Star</h3>
+                  <p class="content-name">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="content">
-              <img
-                src="./images/seafood.jpg"
-                alt="Ресторан Seafood"
-                width="370"
-                height="294"
-              />
-              <div class="offer">
-                <h3 class="list-name">Ресторан Seafood</h3>
-                <p class="content-name">Додаток</p>
-              </div>
+              <a class="portfolio-link" href="">
+                <img
+                  src="./images/seafood.jpg"
+                  alt="Ресторан Seafood"
+                  width="370"
+                  height="294"
+                />
+                <div class="offer">
+                  <h3 class="list-name">Ресторан Seafood</h3>
+                  <p class="content-name">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="content">
-              <img
-                src="./images/prime.jpg"
-                alt="Проєкт Prime"
-                width="370"
-                height="294"
-              />
-              <div class="offer">
-                <h3 class="list-name">Проєкт Prime</h3>
-                <p class="content-name">UI Designer</p>
-              </div>
+              <a class="portfolio-link" href="">
+                <img
+                  src="./images/prime.jpg"
+                  alt="Проєкт Prime"
+                  width="370"
+                  height="294"
+                />
+                <div class="offer">
+                  <h3 class="list-name">Проєкт Prime</h3>
+                  <p class="content-name">UI Designer</p>
+                </div>
+              </a>
             </li>
             <li class="content">
-              <img
-                src="./images/boxes.jpg"
-                alt="Проєкт Boxes"
-                width="370"
-                height="294"
-              />
-              <div class="offer">
-                <h3 class="list-name">Проєкт Boxes</h3>
-                <p class="content-name">Додаток</p>
-              </div>
+              <a class="portfolio-link" href="">
+                <img
+                  src="./images/boxes.jpg"
+                  alt="Проєкт Boxes"
+                  width="370"
+                  height="294"
+                />
+                <div class="offer">
+                  <h3 class="list-name">Проєкт Boxes</h3>
+                  <p class="content-name">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="content">
-              <img
-                src="./images/insp.jpg"
-                alt="Inspiration has no Borders"
-                width="370"
-                height="294"
-              />
-              <div class="offer">
-                <h3 class="list-name">Inspiration has no Borders</h3>
-                <p class="content-name">Веб-сайт</p>
-              </div>
+              <a class="portfolio-link" href="">
+                <img
+                  src="./images/insp.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                />
+                <div class="offer">
+                  <h3 class="list-name">Inspiration has no Borders</h3>
+                  <p class="content-name">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="content">
-              <img
-                src="./images/limited.jpg"
-                alt="Видання Limited Edition"
-                width="370"
-                height="294"
-              />
-              <div class="offer">
-                <h3 class="list-name">Видання Limited Edition</h3>
-                <p class="content-name">Дизайн</p>
-              </div>
+              <a class="portfolio-link" href="">
+                <img
+                  src="./images/limited.jpg"
+                  alt="Видання Limited Edition"
+                  width="370"
+                  height="294"
+                />
+                <div class="offer">
+                  <h3 class="list-name">Видання Limited Edition</h3>
+                  <p class="content-name">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="content">
-              <img
-                src="./images/lab.jpg"
-                alt="Проєкт LAB"
-                width="370"
-                height="294"
-              />
-              <div class="offer">
-                <h3 class="list-name">Проєкт LAB</h3>
-                <p class="content-name">Маркетинг</p>
-              </div>
+              <a class="portfolio-link" href="">
+                <img
+                  src="./images/lab.jpg"
+                  alt="Проєкт LAB"
+                  width="370"
+                  height="294"
+                />
+                <div class="offer">
+                  <h3 class="list-name">Проєкт LAB</h3>
+                  <p class="content-name">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="content">
-              <img
-                src="./images/groving.jpg"
-                alt="Growing Business"
-                width="370"
-                height="294"
-              />
-              <div class="offer">
-                <h3 class="list-name">Growing Business</h3>
-                <p class="content-name">Додаток</p>
-              </div>
+              <a class="portfolio-link" href="">
+                <img
+                  src="./images/groving.jpg"
+                  alt="Growing Business"
+                  width="370"
+                  height="294"
+                />
+                <div class="offer">
+                  <h3 class="list-name">Growing Business</h3>
+                  <p class="content-name">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="" class="logo-two foot">
-          <span class="first-part-footer">Web</span
-          ><span class="last-part-footer">Studio</span>
-        </a>
-        <address>
-          <ul class="address-footer">
-            <li class="footer-address">
+      <div class="container footer-item">
+        <div class="footer-address-link">
+          <a href="" class="logo-two foot">
+            <span class="first-part-footer">Web</span
+            ><span class="last-part-footer">Studio</span>
+          </a>
+          <address>
+            <ul class="address-footer">
+              <li class="footer-address">
+                <a
+                  class="address link"
+                  href="https://maps.google.com"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-address">
+                <a class="contact-footer link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-address">
+                <a class="contact-footer link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="connection">
+          <p class="connect">ПРИЄДНУЙТЕСЬ</p>
+          <ul class="icons-social footer-link">
+            <li class="icon-social-footer">
               <a
-                class="address link"
-                href="https://maps.google.com"
+                class="social-link-footer"
+                href="https://instagram.com"
                 target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+                rel="nofollow noopener noreferrer"
+                aria-label="instagram icon"
+                ><svg class="icon-instagram" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
+              ></a>
             </li>
-            <li class="footer-address">
-              <a class="contact-footer link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li class="icon-social-footer">
+              <a
+                class="social-link-footer"
+                href="https://instagram.com"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                aria-label="instagram icon"
+                ><svg class="icon-twitter" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
+              ></a>
             </li>
-            <li class="footer-address">
-              <a class="contact-footer link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="icon-social-footer">
+              <a
+                class="social-link-footer"
+                href="https://instagram.com"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                aria-label="instagram icon"
+                ><svg class="icon-facebook" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="icon-social-footer">
+              <a
+                class="social-link-footer"
+                href="https://instagram.com"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                aria-label="instagram icon"
+                ><svg class="icon-linkedin" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
