--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <header class="header-main">
       <div class="container header-one">
@@ -184,8 +185,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-instagram" width="20" height="20">
-                      <use href="./images/icons.svg#icon-instagram"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-social">
                   <a
@@ -195,8 +197,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-twitter" width="20" height="20">
-                      <use href="./images/icons.svg#icon-twitter"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-social">
                   <a
@@ -206,8 +209,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-facebook" width="20" height="20">
-                      <use href="./images/icons.svg#icon-facebook"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-social">
                   <a
@@ -217,8 +221,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-linkedin" width="20" height="20">
-                      <use href="./images/icons.svg#icon-linkedin"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -242,8 +247,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-instagram" width="20" height="20">
-                      <use href="./images/icons.svg#icon-instagram"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-social">
                   <a
@@ -253,8 +259,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-twitter" width="20" height="20">
-                      <use href="./images/icons.svg#icon-twitter"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-social">
                   <a
@@ -264,8 +271,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-facebook" width="20" height="20">
-                      <use href="./images/icons.svg#icon-facebook"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-social">
                   <a
@@ -275,8 +283,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-linkedin" width="20" height="20">
-                      <use href="./images/icons.svg#icon-linkedin"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -300,8 +309,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-instagram" width="20" height="20">
-                      <use href="./images/icons.svg#icon-instagram"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-social">
                   <a
@@ -311,8 +321,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-twitter" width="20" height="20">
-                      <use href="./images/icons.svg#icon-twitter"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-social">
                   <a
@@ -322,8 +333,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-facebook" width="20" height="20">
-                      <use href="./images/icons.svg#icon-facebook"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-social">
                   <a
@@ -333,8 +345,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-linkedin" width="20" height="20">
-                      <use href="./images/icons.svg#icon-linkedin"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -358,8 +371,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-instagram" width="20" height="20">
-                      <use href="./images/icons.svg#icon-instagram"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-social">
                   <a
@@ -369,8 +383,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-twitter" width="20" height="20">
-                      <use href="./images/icons.svg#icon-twitter"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-social">
                   <a
@@ -380,8 +395,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-facebook" width="20" height="20">
-                      <use href="./images/icons.svg#icon-facebook"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="icon-social">
                   <a
@@ -391,8 +407,9 @@
                     rel="nofollow noopener noreferrer"
                     aria-label="instagram icon"
                     ><svg class="icon-linkedin" width="20" height="20">
-                      <use href="./images/icons.svg#icon-linkedin"></use></svg
-                  ></a>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -411,8 +428,9 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="company"
                 ><svg class="company" width="106" height="60">
-                  <use href="./images/icons.svg#icon-Logo1"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-Logo1"></use>
+                </svg>
+              </a>
             </li>
             <li class="companys">
               <a
@@ -422,8 +440,9 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="company"
                 ><svg class="company" width="106" height="60">
-                  <use href="./images/icons.svg#icon-Logo2"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-Logo2"></use>
+                </svg>
+              </a>
             </li>
             <li class="companys">
               <a
@@ -433,8 +452,9 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="company"
                 ><svg class="company" width="106" height="60">
-                  <use href="./images/icons.svg#icon-Logo3"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-Logo3"></use>
+                </svg>
+              </a>
             </li>
             <li class="companys">
               <a
@@ -444,8 +464,9 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="company"
                 ><svg class="company" width="106" height="60">
-                  <use href="./images/icons.svg#icon-Logo4"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-Logo4"></use>
+                </svg>
+              </a>
             </li>
             <li class="companys">
               <a
@@ -455,8 +476,9 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="company"
                 ><svg class="company" width="106" height="60">
-                  <use href="./images/icons.svg#icon-Logo5"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-Logo5"></use>
+                </svg>
+              </a>
             </li>
             <li class="companys">
               <a
@@ -466,8 +488,9 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="company"
                 ><svg class="company" width="106" height="60">
-                  <use href="./images/icons.svg#icon-Logo6"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-Logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -515,8 +538,9 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="instagram icon"
                 ><svg class="icon-instagram" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="icon-social-footer">
               <a
@@ -526,8 +550,9 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="instagram icon"
                 ><svg class="icon-twitter" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="icon-social-footer">
               <a
@@ -537,8 +562,9 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="instagram icon"
                 ><svg class="icon-facebook" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="icon-social-footer">
               <a
@@ -548,8 +574,9 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="instagram icon"
                 ><svg class="icon-linkedin" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
