--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <header class="header-main">
       <div class="container header-one">
@@ -270,8 +271,9 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="instagram icon"
                 ><svg class="icon-instagram" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="icon-social-footer">
               <a
@@ -280,9 +282,11 @@
                 target="_blank"
                 rel="nofollow noopener noreferrer"
                 aria-label="instagram icon"
-                ><svg class="icon-twitter" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter"></use></svg
-              ></a>
+              >
+                <svg class="icon-twitter" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="icon-social-footer">
               <a
@@ -291,9 +295,11 @@
                 target="_blank"
                 rel="nofollow noopener noreferrer"
                 aria-label="instagram icon"
-                ><svg class="icon-facebook" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook"></use></svg
-              ></a>
+              >
+                <svg class="icon-facebook" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="icon-social-footer">
               <a
@@ -302,9 +308,11 @@
                 target="_blank"
                 rel="nofollow noopener noreferrer"
                 aria-label="instagram icon"
-                ><svg class="icon-linkedin" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin"></use></svg
-              ></a>
+              >
+                <svg class="icon-linkedin" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
