--- a/portfolio.html
+++ b/portfolio.html
@@ -45,9 +45,12 @@
             </li>
           </ul>
         </nav>
-        <ul class="nav-header">
+        <ul class="nav-header mail-tel">
           <li class="item-nav">
-            <a class="mail-header link" href="mailto:info@devstudio.com">
+            <a
+              class="mail-header link mailtel"
+              href="mailto:info@devstudio.com"
+            >
               <svg class="header-address" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
@@ -55,7 +58,7 @@
             </a>
           </li>
           <li class="item-nav">
-            <a class="tel-header link" href="tel:+380961111111"
+            <a class="tel-header link mailtel" href="tel:+380961111111"
               ><svg class="header-address" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
